fix: visibility issues with larger resoutions

--- a/src/App.css
+++ b/src/App.css
@@ -68,39 +68,29 @@
 header {
   position: fixed;
   display: flex;
-  flex-direction: row;
-  justify-self: center;
-  align-self: center;
-  margin-top: 30px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  top: 50%;
+  left: 4rem;
+  transform: translateY(-200%);
   gap: 20px;
-  font-size: 1.8rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  font-size: 2rem;
+  padding: 1rem;
   border: 2px solid #4a4d51;
   border-radius: 15px;
-  transition: ease 0.3s;
+  transition: opacity 0.6s ease, transform 0.6s ease;
 
   opacity: 0;
-  transform: translateY(-100%);
-  transition: opacity 0.3s ease, transform 0.3s ease;
 }
+
 header:hover {
   border-color: #cbcbcb;
-  transition: ease 0.3s;
 }
+
 .visible {
   opacity: 1;
-  transform: translateY(0);
-}
-.side {
-  flex-direction: column !important;
-  margin-left: 4rem !important;
-  margin-top: 160px !important;
-  margin-left: 4rem !important;
-  align-self: start !important;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 2rem;
+  transform: translateY(-50%);
 }
 
 .flag {
@@ -121,9 +111,9 @@ header:hover {
   height: 15rem;
 }
 .lucca {
-  height: 17.5rem;
-  width: auto;
-  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
 }
 
 .tech-stack {
@@ -138,22 +128,24 @@ a {
   color: #fff;
 }
 
-.italy-content {
+.content {
+  width: 35rem;
   display: flex;
-  flex-direction: row;
-  gap: 30px;
+  flex-direction: column;
+  gap: 10px;
   align-items: center;
-}
-.italy-content p {
-  width: 400px;
 }
 
 .arcane {
-  height: 23rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  object-fit: cover;
 }
 
 .maldives,
 .games {
-  height: 20rem;
-  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
 }
